--- a/Amanda.html
+++ b/Amanda.html
@@ -17,19 +17,22 @@
     <div id="rubrik">
         <div id="vmenu" class="grad"></div>
         
-    </div>
-    <!-- <button id="nextImage">Starta bildspel</button> -->
-    <div id="test" class="grad">
-        <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="En bild som visar en pil neråt" class="pilmenu" /> </h1>   
-    </div>
-    <div id= "dataMeny"> 
-        <ul id="myLinks" class="show">
-            <li><a href="index.html"> Start </a></li>
-            <li><a href="presentation.html"> Presentationssida </a></li>
-            <li><a href="portfolio.html"> Portfolio </a></li>
-            <li><a href="index.html#kontakt"> Kontakt </a></li>        
-    </ul>
-    </div>
+        <div id="menyStor">
+            <div id="header" class="header">
+                <p id="headertext">Grupp 26</p>
+            </div>
+        
+            <div id="test" class="grad">        
+                <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
+            </div>
+            <div id= "dataMeny"> 
+                <ul id="myLinks" class="show">
+                    <li class="listlink"><a href="index.html" class="link"> Start </a></li>
+                    <li class="listlink"><a href="presentation.html" class="link"> Presentationssida </a></li>
+                    <li class="listlink"><a href="portfolio.html" class="link"> Portfolio </a></li>
+                    <li class="listlink"><a href="index.html#kontakt" class="link"> Kontakt </a></li>    
+            </ul>
+            </div> 
 
     <H1 id="vnamn">Amanda Mathisen</H1>
 
