--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li class="listlink"><a href="index.html" class="link"> Start </a></li>
                 <li class="listlink"><a href="presentation.html" class="link"> Presentationssida </a></li>
                 <li class="listlink"><a href="portfolio.html" class="link"> Portfolio </a></li>
-                <li class="listlink"><a href="#kontakt" class="link"> Kontakt </a></li>    
+                <li class="listlink"><a href="index.html#kontakt" class="link"> Kontakt </a></li>    
         </ul>
         </div>   
     <div id="text">
