--- a/portfolio.html
+++ b/portfolio.html
@@ -11,21 +11,22 @@
     <title>Portfolio</title>
 </head>
 <body id="portfolio"  class="grad2">
-    <!-- <div id="bilder">
-         <img class="bildspel" id="bild4" src="images/1.jpg" alt="">
-    </div>
-    <button id="nextImage">Starta bildspel</button> -->
-    <div id="test" class="grad">
-        <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="En bild på en pil som pekar neråt" class="pilmenu" /> </h1>   
-    </div>
-    <div id= "dataMeny"> 
-        <ul id="myLinks" class="show">
-            <li><a href="index.html"> Start </a></li>
-            <li><a href="presentation.html"> Presentationssida </a></li>
-            <li><a href="portfolio.html"> Portfolio </a></li>
-            <li><a href="index.html#kontakt"> Kontakt </a></li>        
-    </ul>
-    </div>
+    <div id="menyStor">
+        <div id="header" class="header">
+            <h1 id="headertext">Grupp 26</h1>
+        </div>
+    
+        <div id="test" class="grad">        
+            <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
+        </div>
+        <div id= "dataMeny"> 
+            <ul id="myLinks" class="show">
+                <li class="listlink"><a href="index.html" class="link"> Start </a></li>
+                <li class="listlink"><a href="presentation.html" class="link"> Presentationssida </a></li>
+                <li class="listlink"><a href="portfolio.html" class="link"> Portfolio </a></li>
+                <li class="listlink"><a href="index.html#kontakt" class="link"> Kontakt </a></li>    
+        </ul>
+        </div> 
     <img id="bagage" src="images/portfölj.png" alt="En tecknad man som bär på en resväska">
     <div id="infoText">
         <h1>Vad har vi med oss i bagaget?</h1>
