--- a/Vilma.html
+++ b/Vilma.html
@@ -11,26 +11,22 @@
 </head>
 
 <body  class="grad2">
-    <!-- <div id="bilder">
-         <img class="bildspel" id="bild4" src="images/1.jpg" alt="">
-    </div> -->
-
+    <div id="menyStor">
+        <div id="header" class="header">
+            <p id="headertext">Grupp 26</p>
+        </div>
     
-    <!-- <button id="nextImage">Starta bildspel</button> -->
-    <div id="test" class="grad">
-        <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="En bild på en pil som pekar neråt" class="pilmenu" /> </h1>   
-    </div>
-    <div id="myLinks" class="show" > 
-        <ul class="menylista">
-    <div id= "dataMeny"> 
-        <ul id="myLinks" class="show">
-            <li><a href="index.html"> Start </a></li>
-            <li><a href="presentation.html"> Presentationssida </a></li>
-            <li><a href="portfolio.html"> Portfolio </a></li>
-            <li><a href="index.html#kontakt"> Kontakt </a></li>        
-    </ul>
-    </div>
-    </div>
+        <div id="test" class="grad">        
+            <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
+        </div>
+        <div id= "dataMeny"> 
+            <ul id="myLinks" class="show">
+                <li class="listlink"><a href="index.html" class="link"> Start </a></li>
+                <li class="listlink"><a href="presentation.html" class="link"> Presentationssida </a></li>
+                <li class="listlink"><a href="portfolio.html" class="link"> Portfolio </a></li>
+                <li class="listlink"><a href="index.html#kontakt" class="link"> Kontakt </a></li>    
+        </ul>
+        </div> 
     <h1>Vilma Ottner</h1>
     <div class="vpre">
         <img  src="mv.jpg" alt="vilmas babypic" id="vilmabild">
