--- a/presentation.html
+++ b/presentation.html
@@ -11,17 +11,22 @@
 </head>
 <body  id="presentation" class="grad2">
 
-   
-        <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="En bild på en pil som pekar neråt" class="pilmenu" /> </h1>   
-    </div>
-    <div id= "dataMeny"> 
-        <ul id="myLinks" class="show">
-            <li><a href="index.html"> Start </a></li>
-            <li><a href="presentation.html"> Presentationssida </a></li>
-            <li><a href="portfolio.html"> Portfolio </a></li>
-            <li><a href="index.html#kontakt"> Kontakt </a></li>        
-    </ul>
-    </div>
+    <div id="menyStor">
+        <div id="header" class="header">
+            <h1 id="headertext">Grupp 26</h1>
+        </div>
+    
+        <div id="test" class="grad">        
+            <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
+        </div>
+        <div id= "dataMeny"> 
+            <ul id="myLinks" class="show">
+                <li class="listlink"><a href="index.html" class="link"> Start </a></li>
+                <li class="listlink"><a href="presentation.html" class="link"> Presentationssida </a></li>
+                <li class="listlink"><a href="portfolio.html" class="link"> Portfolio </a></li>
+                <li class="listlink"><a href="index.html#kontakt" class="link"> Kontakt </a></li>    
+        </ul>
+        </div> 
 
     <div class="presentation">
         <div id="namnp">
