--- a/presentation.html
+++ b/presentation.html
@@ -53,7 +53,7 @@
             <p>Vi är en extremt bra grupp med massor av erfarenhet</p>
         </div>
         <div>
-            <img src="images/1.jpg" id="pic" alt="">
+            <img src="images/1.jpg" id="gruppBild" alt="">
         </div>
     </div>
    
