--- a/Amanda.html
+++ b/Amanda.html
@@ -38,7 +38,7 @@
 
     <div class="vpre">
         <img id="amanda" src="images/amanda.jpg" alt="En bild på Amanda">
-        <p id="atext">Hej jag heter Amanda</p>
+        <p id="atext">Hej jag heter Amanda, jag kommer från Borlänge</p>
     </div>
     
     <div id="vdiagram" >
