--- a/Vilma.html
+++ b/Vilma.html
@@ -27,7 +27,7 @@
                 <li class="listlink"><a href="index.html#kontakt" class="link"> Kontakt </a></li>    
         </ul>
         </div> 
-    <h1>Vilma Ottner</h1>
+    <h1 id="textA">Vilma Ottner</h1>
     <div class="vpre">
         <img  src="mv.jpg" alt="vilmas babypic" id="vilmabild">
         <p id="vptext">
