--- a/Vilma.html
+++ b/Vilma.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
 
-    <title>Document</title>
+    <title>Vilmas sida</title>
 </head>
 
 <body  class="grad2">
@@ -16,8 +15,8 @@
             <p id="headertext">Grupp 26</p>
         </div>
     
-        <div id="test" class="grad">        
-            <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
+        <div id="menuDIV" class="grad">        
+            <h1 id='menu'>Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
         </div>
         <div id= "dataMeny"> 
             <ul id="myLinks" class="show">
@@ -45,7 +44,7 @@
         
         <div class="yttretabell" > 
             <div id="vstapel1" class="grad3"> 
-                <span class="div1">
+                <span class="preSpan">
                     <h4 class="tabelltext">Badmintion</h4>
                 </span> 
                 <span class="procenten">
@@ -56,7 +55,7 @@
 
         <div class="yttretabell">
             <div id="vstapel2" class="grad3">
-                <span class="div1">
+                <span class="preSpan">
                     <h4 class="tabelltext"> Java</h4>
                 </span>
                 <span class="procenten">
@@ -67,7 +66,7 @@
 
         <div class="yttretabell">
             <div id="vstapel3" class="grad3"> 
-                <span class="div1">
+                <span class="preSpan">
                     <h4 class="tabelltext" >Vakna tidigt</h4>
                 </span>
                 <span class="procenten">
@@ -78,7 +77,7 @@
 
         <div class="yttretabell">
             <div id="vstapel4" class="grad3">
-                <span class="div1">
+                <span class="preSpan">
                     <h4 class="tabelltext" >Media</h4>
                 </span>
                 <span class="procenten">
@@ -89,7 +88,7 @@
 
         <div class="yttretabell">
             <div id="vstapel5" class="grad3">
-                <span class="div1">
+                <span class="preSpan">
                     <h4 class="tabelltext">Dricka cola zero</h4>
                 </span>
                 <span class="procenten">
