--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -14,8 +13,8 @@
             <p id="headertext">Grupp 26</p>
         </div>
     
-        <div id="test" class="grad">        
-            <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
+        <div id="menuDIV" class="grad">        
+            <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="En bild på en pil" class="pilmenu" /> </h1>   
         </div>
         <div id= "dataMeny"> 
             <ul id="myLinks" class="show">
