--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="portfolio.js"></script>
@@ -16,7 +15,7 @@
             <h1 id="headertext">Grupp 26</h1>
         </div>
     
-        <div id="test" class="grad">        
+        <div id="menuDIV" class="grad">        
             <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
         </div>
         <div id= "dataMeny"> 
