--- a/presentation.html
+++ b/presentation.html
@@ -30,12 +30,12 @@
 
     <div class="presentation">
         <div id="namnp">
-            <h1>Grupp 26</h1>
+            <h1 id="rubrikpres">Grupp 26</h1>
             <div id="bilder">
                 <img class="bildspel" id="bild4" src="images/1.jpg" alt="Bildspels bilder, ändras med en animering på intervall">
            </div>
            <button id="nextImage">Starta bildspel</button>
-            <h2>Består av:</h2>
+            <h2 class="underrubrik"> Består av:</h2>
             <p class= "animate"><a id="aLink" href="Amanda.html">Amanda Mathisen</a></p>
             <p class= "animate"><a id="vLink"  href="Vilma.html">Vilma Ottner</a></p>
             <p class= "animate"><a id="jLink" href="Jonte.html">Jonathan fucking åmål Gabrielsson</a></p>
@@ -46,7 +46,7 @@
         </span>
         </div>
         <div class="presentationstext">
-            <h2>Vilka är vi?</h2>
+            <h2 class="underrubrik">Vilka är vi?</h2>
             <p>Vi är ett gäng glada systemvetare som kommer från tre olika städer.
                 Jonte är från fucking åmål, Vilma från fina Örebro och Amanda från sveriges fulaste stad Borlänge.
             </p>
@@ -54,7 +54,7 @@
            <div id="test" class="grad">
         </div>
         <div>
-            <h2>Kompetens och erfarenhet</h2>
+            <h2 class="underrubrik"> Kompetens och erfarenhet</h2>
             <p>Vi är en extremt bra grupp med massor av erfarenhet</p>
         </div>
         <div>
