padding o sånt på portfolio

--- a/Jonte.html
+++ b/Jonte.html
@@ -23,7 +23,7 @@
         </div>
     
         <div id="menuDIV" class="grad">        
-            <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
+            <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="En bild som pekar neråt" class="pilmenu" /> </h1>   
         </div>
         <div id= "dataMeny"> 
             <ul id="myLinks" class="show">
