--- a/presentation.html
+++ b/presentation.html
@@ -16,7 +16,7 @@
         </div>
     
         <div id="menuDIV" class="grad">        
-            <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="" class="pilmenu" /> </h1>   
+            <h1 id='menu' >Meny <img src="pil.png" id= "pil" alt="En pil som pekar neråt" class="pilmenu" /> </h1>   
         </div>
         <div id= "dataMeny"> 
             <ul id="myLinks" class="show">
