--- a/presentation.html
+++ b/presentation.html
@@ -57,7 +57,7 @@
             <p>Vi är en extremt bra grupp med massor av erfarenhet</p>
         </div>
         <div>
-            <img src="images/1.jpg" id="gruppBild" alt="">
+            <img src="/images/gruppBild2.jpg" id="gruppBild" alt="">
         </div>
     </div>
    
