--- a/Vilma.html
+++ b/Vilma.html
@@ -30,10 +30,7 @@
     <div class="vpre">
         <img  src="mv.jpg" alt="vilmas babypic" id="vilmabild">
         <p id="vptext">
-        sho bre, vad händer yao? peace bre
-        hej hej monika, hej på dig monika!
-
-        this one is for the boys 
+            Elementum in etiam tincidunt feugiat mus at elit orci. Potenti Consequat lorem suscipit pulvinar Nullam Diam molestie. Aliquam faucibus laoreet accumsan tincidunt bibendum inceptos leo tellus. Sapien rhoncus cum netus maecenas faucibus risus nullam nisi commodo ac per amet suscipit, malesuada sed torquent dis sem etiam curae; etiam nunc lacus sodales facilisis litora lorem volutpat habitasse inceptos senectus sodales. Pulvinar aliquet arcu aptent. Curabitur scelerisque. Rhoncus fames lorem id fringilla risus. Cum inceptos. Malesuada maecenas. Orci nostra iaculis molestie. Tempor. Eleifend eu at elementum dapibus ridiculus curabitur. Hendrerit ante ipsum platea adipiscing tincidunt natoque a senectus primis fermentum conubia adipiscing hac sem nunc tincidunt euismod porttitor nec congue vulputate Odio donec.
         </p>
     </div>
 
