--- a/Amanda.html
+++ b/Amanda.html
@@ -37,7 +37,7 @@
 
     <div class="vpre">
         <img id="amanda" src="images/amanda.jpg" alt="En bild på Amanda">
-        <p id="atext">Hej jag heter Amanda, jag kommer från Borlänge</p>
+        <p id="atext">Turpis habitasse platea interdum cras torquent nunc nostra per euismod massa rutrum tincidunt. Tincidunt nisl neque augue porta senectus. Bibendum litora dictum vel, lacinia sodales fringilla egestas ac rhoncus gravida enim. Taciti non phasellus. Platea Mauris, lacus ornare euismod turpis cubilia leo sodales turpis proin sociosqu bibendum natoque facilisi pharetra nostra commodo ultrices, vel velit ligula a. Dignissim tellus ac imperdiet eget tempor vestibulum aptent duis bibendum. Consectetuer viverra venenatis cras cubilia. Luctus aptent. Sodales magnis odio lacinia mattis lacus et mauris sagittis consequat at tellus dictumst egestas eleifend feugiat duis. Habitant iaculis Nisl ullamcorper fames netus cursus auctor rhoncus.</p>
     </div>
     
     <div id="vdiagram" >
