--- a/Jonte.html
+++ b/Jonte.html
@@ -37,7 +37,10 @@
     <H1 id="textA">Jonathan Gabrielsson</H1>
     <div class="vpre">  
         <img id="jontebild" src="jonte.jpg" alt="En bild på Jonathan">
-    <p id="jtext">Hejsan svejsan lillebror! Jag gillar hockey, öl och kolla på brudar i bikini på stranden. Jag kommer från fucking åmål, där pratar vi könstigt! hoppas ni förstår vad jag säger, jag vet att det är svårt!!</p>
+    <p id="jtext"> Curabitur tincidunt cras eu, interdum eu sagittis, purus, varius auctor torquent cubilia quam senectus odio dictumst, platea venenatis nostra nec pharetra faucibus erat dolor. 
+        Pellentesque. Leo porttitor mattis molestie congue, arcu fermentum ante. 
+        Senectus quisque nostra taciti suscipit fringilla habitasse commodo netus cras primis metus sollicitudin rhoncus mauris class aliquet senectus libero tincidunt duis natoque vehicula dignissim lobortis leo venenatis blandit consequat integer dui neque magna consequat ipsum. 
+        Montes litora sociis felis in consequat semper nonummy Aptent neque non habitant turpis parturient dictumst congue. Primis dis in mauris mattis orci pretium arcu magna hac. Consequat platea lobortis auctor adipiscing facilisis.</p>
     
     </div>
     
