--- a/Jonte.html
+++ b/Jonte.html
@@ -37,7 +37,7 @@
     <H1 id="textA">Jonathan Gabrielsson</H1>
     <div class="vpre">  
         <img id="jontebild" src="jonte.jpg" alt="En bild på Jonathan">
-    <p id="jtext">Hejsan svejsan lillebror! Jag gillar hockey, öl och kolla på brudar i bikini på stranden. Jag kommer från fucking åmål, där pratar vi könstigt! hoppas ni förstår vad jag säger, jag vet att det är svårt!!</p>
+    <p id="jtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sed autem itaque numquam at perspiciatis ipsam, nemo fugiat odit corrupti fuga voluptatem impedit distinctio magni suscipit molestias veniam iusto unde eum labore rem officiis commodi aperiam? Blanditiis at nulla sit voluptatum? Nisi labore illo rem deleniti quod ex temporibus, ad, officiis enim explicabo incidunt minus hic obcaecati distinctio? Error saepe modi quaerat vero quod deleniti vel? Expedita assumenda quia blanditiis quo molestias mollitia suscipit, accusantium dicta perferendis quod quos sit illo nisi tenetur officia. Quod tempore ab cumque! Dolorum, iusto. Eos beatae doloribus ex! Eaque, veritatis. Commodi sunt aspernatur odit.</p>
     
     </div>
     
