--- a/presentation.html
+++ b/presentation.html
@@ -28,26 +28,21 @@
         </div> 
 
     <div class="presentation">
-        <div id="namnp">
+        <div id="namn">
             <h1 id="rubrikpres">Grupp 26</h1>
             <div id="bilder">
-                <img class="bildspel" id="bild4" src="images/1.jpg" alt="Bildspels bilder, ändras med en animering på intervall">
+                <img class="bildspel" id="bild4" src="jonte.jpg" alt="Bildspels bilder, ändras med en animering på intervall">
            </div>
            <button id="nextImage">Starta bildspel</button>
             <h2 class="underrubrik"> Består av:</h2>
             <p class= "animate"><a id="aLink" href="Amanda.html">Amanda Mathisen</a></p>
             <p class= "animate"><a id="vLink"  href="Vilma.html">Vilma Ottner</a></p>
-            <p class= "animate"><a id="jLink" href="Jonte.html">Jonathan fucking åmål Gabrielsson</a></p>
-        <span id="hoverPics">
-            <img id="aBild" src="images/3.jpg" alt="">
-            <img id="vBild"src="images/2.webp" alt="">
-            <img id='jBild' src="images/1.jpg" alt="">
-        </span>
+            <p class= "animate"><a id="jLink" href="Jonte.html">Jonathan Gabrielsson</a></p>
         </div>
         <div class="presentationstext">
             <h2 class="underrubrik">Vilka är vi?</h2>
             <p>Vi är ett gäng glada systemvetare som kommer från tre olika städer.
-                Jonte är från fucking åmål, Vilma från fina Örebro och Amanda från sveriges fulaste stad Borlänge.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id incidunt aliquam amet voluptas vero odio repellendus et possimus nobis saepe, temporibus, debitis ipsa! Mollitia, quo aliquid recusandae iure eos quia beatae. Eveniet natus provident vitae, debitis minima maxime sit maiores? Saepe omnis voluptatum deserunt! Voluptate deserunt rem earum consequatur blanditiis ut, et fugit assumenda ea at obcaecati perferendis! Molestiae sunt illum sint dolores? Deleniti quos neque expedita incidunt hic commodi tenetur sunt amet numquam iste ullam repellat cumque ex assumenda libero, aliquid debitis praesentium aut necessitatibus et cupiditate est? Minima debitis dignissimos quibusdam necessitatibus voluptatibus assumenda doloribus excepturi. Doloremque, assumenda!
             </p>
            
            <div id="test" class="grad">
