--- a/Vilma.html
+++ b/Vilma.html
@@ -48,57 +48,66 @@
         
         <div class="yttretabell" > 
             <div id="vstapel1" class="grad3"> 
+                <h4>
                 <span class="preSpan">
-                    <h4 class="tabelltext">Badmintion</h4>
+                    Badmintion
                 </span> 
                 <span class="procenten">
-                    <h4 >85%</h4>
+                    85%
                 </span>
+                </h4>
             </div>
         </div>
 
         <div class="yttretabell">
             <div id="vstapel2" class="grad3">
+                <h4>
                 <span class="preSpan">
-                    <h4 class="tabelltext"> Java</h4>
+                    Java
                 </span>
                 <span class="procenten">
-                    <h4 >59%</h4>
-                </span> 
+                    59%
+                </span>
+                </h4>
             </div>
         </div>
 
         <div class="yttretabell">
-            <div id="vstapel3" class="grad3"> 
+            <div id="vstapel3" class="grad3">
+                <h4>
                 <span class="preSpan">
-                    <h4 class="tabelltext" >Vakna tidigt</h4>
+                    Vakna tidigt
                 </span>
                 <span class="procenten">
-                    <h4>1000%</h4>
+                    1000%
                 </span>
+                </h4>
             </div>
         </div>
 
         <div class="yttretabell">
             <div id="vstapel4" class="grad3">
+                <h4>
                 <span class="preSpan">
-                    <h4 class="tabelltext" >Media</h4>
+                    Media
                 </span>
                 <span class="procenten">
-                    <h4>70%</h4>
+                    70%
                 </span>
+                </h4>
             </div>
         </div>
 
         <div class="yttretabell">
             <div id="vstapel5" class="grad3">
+                <h4>
                 <span class="preSpan">
-                    <h4 class="tabelltext">Dricka cola zero</h4>
+                    Dricka cola zero
                 </span>
                 <span class="procenten">
-                    <h4>98%</h4>
+                    98%
                 </span>
-                
+                </h4>
             </div>
         </div>
 
