--- a/Amanda.html
+++ b/Amanda.html
@@ -29,6 +29,7 @@
                     <li class="listlink"><a href="index.html#kontakt" class="link"> Kontakt </a></li>    
             </ul>
             </div> 
+        </div> 
 
     <H1 id="textA">Amanda Mathisen</H1>
 
@@ -47,57 +48,67 @@
         <h3 id="tabellrubrik">Kunskaper</h3>
         
         <div class="yttretabell">
-            <div id="astapel1" class="grad3"> 
+            <div id="astapel1" class="grad3">
+                <h4>
                 <span class="preSpan">
-                    <h4 class="tabelltext">Scrum</h4>
+                    Scrum
                 </span>
                 <span class="procenten">
-                    <h4>80%</h4>
+                    80%
                  </span>
+                </h4> 
             </div>
         </div>
 
         <div class="yttretabell">
             <div id="astapel2" class="grad3">
+                <h4>
                 <span class="preSpan">
-                    <h4 class="tabelltext" > Java </h4>
+                    Java
                 </span>
                 <span class="procenten">
-                    <h4>90%</h4>
+                    90%
                 </span>
+                </h4>
             </div>
         </div>
 
         <div class="yttretabell">
             <div id="astapel3" class="grad3">
+                <h4>
                 <span class="preSpan">
-                    <h4 class="tabelltext" >Vakna tidigt</h4>
+                    Vakna tidigt
                 </span>
                 <span class="procenten">
-                    <h4>92%</h4>
+                    92%
                 </span>
+                </h4>
             </div>
         </div>
 
         <div class="yttretabell">
             <div id="astapel4" class="grad3">
+                <h4>
                 <span class="preSpan"> 
-                    <h4 class="tabelltext" >Dansa</h4>
+                    Dansa
                 </span>
                 <span class="procenten">
-                    <h4>61%</h4>
+                    61%
                 </span>
+                </h4>
             </div>
         </div>
 
         <div class="yttretabell">
             <div id="astapel5" class="grad3">
+                <h4>
                 <span class="preSpan">
-                    <h4 class="tabelltext" >Dataspel</h4>
+                    Dataspel
                 </span>
                 <span class="procenten">
-                    <h4>86%</h4>
+                    86%
                 </span>
+                </h4>
             </div>
         </div>
 
