--- a/Jonte.html
+++ b/Jonte.html
@@ -30,6 +30,8 @@
                 <li class="listlink"><a href="index.html#kontakt" class="link"> Kontakt </a></li>    
         </ul>
         </div> 
+    </div> 
+
     <div id="jonteDiv">
     <H1 id="textA">Jonathan Gabrielsson</H1>
     <div class="vpre">  
@@ -47,57 +49,66 @@
         
             <div class="yttretabell">
                 <div id="jstapel1" class="grad3"> 
+                    <h4>
                     <span class="preSpan">
-                        <h4 class="tabelltext">Javascript</h4>
+                        Javascript
                     </span>
                     <span class="procenten">
-                        <h4>69%</h4>
+                        69%
                     </span>
+                    </h4>
                 </div>
             </div>
 
             <div class="yttretabell">
                 <div id="jstapel2" class="grad3"> 
+                    <h4>
                     <span class="preSpan">
-                        <h4 class="tabelltext" >Java</h4>
+                        Java
                     </span>
                     <span class="procenten">
-                        <h4>78%</h4>
+                        78%
                     </span>
+                    </h4>
                 </div>
             </div>
 
             <div class="yttretabell">
                 <div id="jstapel3" class="grad3">
+                    <h4>
                     <span class="preSpan">
-                    <h4 class="tabelltext" >LOL</h4>
+                        LOL
                     </span>
                     <span class="procenten">
-                        <h4>88%</h4>
+                        88%
                     </span>
+                    </h4>
                 </div>
             </div>
 
             <div class="yttretabell">
                 <div id="jstapel4" class="grad3">
+                    <h4>
                     <span class="preSpan">
-                        <h4 class="tabelltext" >Ishockey</h4>
+                        Ishockey
                     </span>
                     <span class="procenten">
-                        <h4>63%</h4>
+                        63%
                     </span>
+                    </h4>
                 </div>
             </div>
 
             <div class="yttretabell">
                 <div id="jstapel5" class="grad3">
+                    <h4>
                     <span class="preSpan">
-                        <h4 class="tabelltext" >Krydda maten</h4>
+                        Krydda maten
                     </span>
                     <span class="procenten">  
-                        <h4>94%</h4>
+                        94%
                     </span>
-
+                    </h4>
             </div>
         </div>
     </div>
