--- a/Vilma.html
+++ b/Vilma.html
@@ -26,6 +26,7 @@
                 <li class="listlink"><a href="index.html#kontakt" class="link"> Kontakt </a></li>    
         </ul>
         </div> 
+        </div>
     <h1 id="textA">Vilma Ottner</h1>
     <div class="vpre">
         <img  src="mv.jpg" alt="vilmas babypic" id="vilmabild">
@@ -117,8 +118,5 @@
     <script src="index.js"></script>
 
 </body>
-
-
-
 
 </html>
