--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                 <li class="listlink"><a href="index.html#kontakt" class="link"> Kontakt </a></li>    
         </ul>
         </div>   
+    </div> 
+
     <div id="text">
         <h2>VÄLKOMMEN HIT</h2>
         <h3>Välkommen till vår hemsida, här kan ni läsa allt om vårt projekt</h3>
