--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,8 @@
                 <li class="listlink"><a href="index.html#kontakt" class="link"> Kontakt </a></li>    
         </ul>
         </div> 
+    </div> 
+
     <img id="bagage" src="images/portfölj.png" alt="En tecknad man som bär på en resväska">
     <div id="infoText">
         <h1>Vad har vi med oss i bagaget?</h1>
