--- a/presentation.html
+++ b/presentation.html
@@ -26,6 +26,7 @@
                 <li class="listlink"><a href="index.html#kontakt" class="link"> Kontakt </a></li>    
         </ul>
         </div> 
+    </div> 
 
     <div class="presentation">
         <div id="namn">
