--- a/presentation.html
+++ b/presentation.html
@@ -40,6 +40,7 @@
             <p class= "animate"><a id="vLink"  href="Vilma.html">Vilma Ottner</a></p>
             <p class= "animate"><a id="jLink" href="Jonte.html">Jonathan Gabrielsson</a></p>
         </div>
+        
         <div class="presentationstext">
             <h2 class="underrubrik">Vilka är vi?</h2>
             <p>Vi är ett gäng glada systemvetare som kommer från tre olika städer.
@@ -55,6 +56,7 @@
         <div>
             <img src="/images/gruppBild2.jpg" id="gruppBild" alt="">
         </div>
+    </div>
     </div>
    
     
